fix: stack legend aligns to start, not end (#20)

--- a/src/legend/style.scss
+++ b/src/legend/style.scss
@@ -15,6 +15,7 @@
 	&.is-style-stack {
 		flex-direction: row;
 		flex-wrap: wrap;
+		justify-content: flex-start;
 		gap: var(--wp--preset--spacing--30);
 	}
 
